fixed the background haha yes dudegit add -A it now covers all the space I want it to!

--- a/src/about.css
+++ b/src/about.css
@@ -1,8 +1,8 @@
 .aboutcontainer {
 	display: flex;
-	width: 100%;
 	height: fit-content;
-	margin-top: 1vh;
+	width: 90%;
+	margin: 2%;
 	align-content: center;
 	justify-content: space-evenly;
 	margin-left: auto;
@@ -10,7 +10,7 @@
 	flex-flow: column nowrap;
 	color: black;
 	border-radius: 5px;
-	margin-bottom: 1%;
+	background: rgba(63, 72, 88, 0.37);
 }
 
 .mySpans {
@@ -18,7 +18,6 @@
 	font-weight: 900;
 }
 .fspan {
-	background: inherit;
 	margin: 5px;
 	display: flex;
 	justify-content: center;
@@ -27,7 +26,6 @@
 	margin: 2vh;
 }
 .sspan {
-	background: inherit;
 	margin: 5px;
 	display: flex;
 	justify-content: center;
@@ -48,7 +46,6 @@
 }
 
 .tspan {
-	background: inherit;
 	margin: 5px;
 	display: flex;
 	justify-content: center;
@@ -58,7 +55,6 @@
 }
 
 .fourthspan {
-	background: inherit;
 	margin: 5px;
 	display: flex;
 	justify-content: center;
