--- a/src/contact.css
+++ b/src/contact.css
@@ -3,20 +3,21 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-content: center;
-	height: 60vh;
-	max-height: 600px;
 	font-size: 26px;
-	margin-top: 1%;
+	background: rgba(63, 72, 88, 0.37);
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .cultext {
 	margin: 0vh auto 0vh auto;
 }
 .phone {
-	margin: 3px auto 3px auto;
+	margin: 2% auto 3px auto;
 }
 .address {
-	margin: 3px auto 3px auto;
+	margin: 0px auto 3px auto;
 }
 
 .culdesac {
@@ -25,5 +26,5 @@
 	align-content: center;
 	max-height: 70%;
 	max-width: 70%;
-	margin: 3px auto 3px auto;
+	margin: 0px auto 3% auto;
 }
